--- a/app/src/main/res/layout/layout_create_file_java.xml
+++ b/app/src/main/res/layout/layout_create_file_java.xml
@@ -86,8 +86,7 @@
   <CheckBox
         android:id="@+id/checkButton"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="12dp"
+        android:layout_margin="8dp"
         android:layout_width="wrap_content"
         android:text="@string/create_auto_layout"
         android:textSize="12sp"
