Complete all resources only if attribute format is set to 'reference'

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,7 +17,7 @@
 
 <resources>
   <declare-styleable name="Test">
-    <attr name="testAttr" format="color"/>
+    <attr name="testAttr" format="dimension|reference"/>
     <attr name="testRef" format="reference"/>
   </declare-styleable>
 </resources>
