--- a/tests/test-project/app/src/main/res/layout/TestAttrsValue_template.xml
+++ b/tests/test-project/app/src/main/res/layout/TestAttrsValue_template.xml
@@ -23,7 +23,7 @@
         android:id="@+id/icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:textColor="tran@@cursor@@"
+        android:textColor="@@cursor@@"
         android:padding="4dp"
         android:layout_marginEnd="8dp"
         android:layout_gravity="center_vertical"/>
