--- a/lsp/xml/src/main/res/animator/test.xml
+++ b/lsp/xml/src/main/res/animator/test.xml
@@ -15,5 +15,10 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<changeTransform xmlns:android="http://schemas.android.com/apk/res/android">
-</changeTransform>
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+  <animator>
+    <propertyValuesHolder>
+      <keyframe
+    </propertyValuesHolder>
+  </animator>
+</set>
