--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,22 @@
-<resources>
+<resources><!--
+  ~  This file is part of AndroidIDE.
+  ~
+  ~  AndroidIDE is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  AndroidIDE is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
+  -->
 
-  <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
-    <item name="actionOverflowButtonStyle">@style/AppTheme.Toolbar.OverflowButton</item>
+  <style name="Theme.AndroidIDE.Base" parent="Theme.Material3.Dark.NoActionBar">
+    <!--    Colors    -->
     <item name="colorPrimary">@color/primaryColor</item>
     <item name="colorPrimaryDark">@color/primaryDarkColor</item>
     <item name="colorOnPrimary">@color/secondaryDarkColor</item>
@@ -11,27 +26,37 @@
     <item name="colorButtonNormal">@color/secondaryColor</item>
     <item name="colorControlNormal">@color/secondaryColor</item>
     <item name="colorControlHighlight">@color/rippleHighlightColor</item>
-    <item name="checkboxStyle">@style/AppTheme.CheckBox</item>
-    <item name="fontFamily">@font/josefin_sans</item>
     <item name="hintTextColor">@color/secondaryColor</item>
     <item name="android:textColorLink">@color/secondaryColor</item>
-    <item name="android:textCursorDrawable">@drawable/textfield_cursor</item>
-    <item name="shapeAppearanceLargeComponent">@style/AppTheme.ShapeOverlay.Large</item>
-    <item name="chipStyle">@style/AppTheme.UIDesigner.WidgetGroupChip</item>
-    <item name="windowActionModeOverlay">true</item>
-    <item name="windowActionBarOverlay">true</item>
     <item name="android:colorButtonNormal">@color/secondaryColor</item>
     <item name="android:textColorSecondary">@color/secondaryTextColor</item>
-    <item name="android:windowBackground">@color/content_background</item>
+    <item name="android:textCursorDrawable">@drawable/textfield_cursor</item>
+
+    <!--    Font    -->
+    <item name="fontFamily">@font/josefin_sans</item>
     <item name="android:fontFamily">@font/josefin_sans</item>
-    <item name="switchPreferenceStyle">@style/AppTheme.SwitchPreference</item>
+
+    <!--    Window configuration    -->
+    <item name="android:windowBackground">@color/content_background</item>
+    <item name="windowActionModeOverlay">true</item>
+    <item name="windowActionBarOverlay">true</item>
   </style>
+
+  <style name="Theme.AndroidIDE.Styled" parent="Theme.AndroidIDE.Base">
+    <item name="checkboxStyle">@style/AppTheme.CheckBox</item>
+    <item name="actionOverflowButtonStyle">@style/AppTheme.Toolbar.OverflowButton</item>
+    <item name="chipStyle">@style/AppTheme.UIDesigner.WidgetGroupChip</item>
+    <item name="switchPreferenceStyle">@style/AppTheme.SwitchPreference</item>
+    <item name="shapeAppearanceLargeComponent">@style/AppTheme.ShapeOverlay.Large</item>
+  </style>
+
+  <style name="Theme.AndroidIDE" parent="Theme.AndroidIDE.Styled" />
 
   <style name="AppTheme.Splash" parent="Theme.SplashScreen">
     <item name="windowSplashScreenBackground">@color/primaryColor</item>
     <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_animated</item>
     <item name="windowSplashScreenAnimationDuration">200</item>
-    <item name="postSplashScreenTheme">@style/AppTheme</item>
+    <item name="postSplashScreenTheme">@style/Theme.AndroidIDE</item>
     <item name="android:statusBarColor">@color/primaryColor</item>
     <item name="android:navigationBarColor">@color/primaryColor</item>
     <item name="android:windowLightStatusBar">false</item>
