Use RecyclerView for main screen actions

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,146 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinator"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/coordinator"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/main_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_launcher_main"
-        app:shapeAppearance="@style/AppTheme.ShapeAppearance.MainFragment.Logo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+  <com.google.android.material.imageview.ShapeableImageView
+    android:id="@+id/main_image"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:layout_margin="16dp"
+    android:src="@drawable/ic_launcher_main"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.25"
+    app:shapeAppearance="@style/AppTheme.ShapeAppearance.MainFragment.Logo" />
 
-    <TextView
-        android:id="@+id/getStarted"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="@string/get_started"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/primaryTextColor"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_image" />
+  <TextView
+    android:id="@+id/getStarted"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="4dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginBottom="4dp"
+    android:text="@string/get_started"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:textColor="@color/primaryTextColor"
+    android:textStyle="bold"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/main_image" />
 
-    <TextView
-        android:id="@+id/greetingText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="@string/msg_create_new_project_greeting"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/primaryTextColorLight"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/getStarted" />
+  <TextView
+    android:id="@+id/greetingText"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
+    android:text="@string/msg_create_new_project_greeting"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:textColor="@color/primaryTextColorLight"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/getStarted" />
 
-    <Button
-        android:id="@+id/create_project"
-        style="@style/Widget.Material3.Button.TextButton.Icon"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:elevation="0dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="@string/msg_create_new_project"
-        android:textAlignment="center"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:icon="@drawable/ic_add"
-        app:iconPadding="8dp"
-        app:iconTint="@color/primaryTextColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/greetingText"
-        app:rippleColor="@color/rippleHighlightColor" />
-
-    <Button
-        android:id="@+id/open_project"
-        style="@style/Widget.Material3.Button.TextButton.Icon"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:elevation="0dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="@string/msg_open_existing_project"
-        android:textAlignment="center"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:icon="@drawable/ic_folder"
-        app:iconPadding="8dp"
-        app:iconTint="@color/primaryTextColor"
-        app:layout_constraintStart_toStartOf="@id/create_project"
-        app:layout_constraintTop_toBottomOf="@id/create_project"
-        app:rippleColor="@color/rippleHighlightColor" />
-
-    <Button
-        android:id="@+id/open_terminal"
-        style="@style/Widget.Material3.Button.TextButton.Icon"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:elevation="0dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="@string/btn_terminal"
-        android:textAlignment="center"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:icon="@drawable/ic_terminal"
-        app:iconPadding="8dp"
-        app:iconTint="@color/primaryTextColor"
-        app:layout_constraintStart_toStartOf="@id/create_project"
-        app:layout_constraintTop_toBottomOf="@id/open_project"
-        app:rippleColor="@color/rippleHighlightColor" />
-
-    <Button
-        android:id="@+id/goto_preferences"
-        style="@style/Widget.Material3.Button.TextButton.Icon"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:elevation="0dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="@string/msg_preferences"
-        android:textAlignment="center"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:icon="@drawable/ic_settings"
-        app:iconPadding="8dp"
-        app:iconTint="@color/primaryTextColor"
-        app:layout_constraintStart_toStartOf="@id/create_project"
-        app:layout_constraintTop_toBottomOf="@id/open_terminal"
-        app:rippleColor="@color/rippleHighlightColor" />
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/actions"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="@id/greetingText"
+    app:layout_constraintStart_toStartOf="@id/greetingText"
+    app:layout_constraintTop_toBottomOf="@id/greetingText"
+    tools:listitem="@layout/layout_main_action_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
