Implemented the preferences screen with the Preferences API

--- a/preferences/src/main/res/layout/layout_dialog_text_input.xml
+++ b/preferences/src/main/res/layout/layout_dialog_text_input.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~  This file is part of AndroidIDE.
+  ~
+  ~  AndroidIDE is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  AndroidIDE is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
@@ -12,11 +29,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
-    android:theme="@style/AppTheme.TextInputLayout"
-    app:counterEnabled="true"
-    app:counterMaxLength="40"
-    app:startIconDrawable="@drawable/ic_file_rename"
-    app:startIconTint="@color/primaryIconColor">
+    android:theme="@style/AppTheme.TextInputLayout">
 
     <com.google.android.material.textfield.TextInputEditText
       android:layout_width="match_parent"
