--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -107,9 +107,13 @@
 
     </ViewFlipper>
 
-    <include
+    <com.itsaky.androidide.views.EditorBottomSheet
       android:id="@+id/bottom_sheet"
-      layout="@layout/layout_editor_bottom_sheet" />
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      app:behavior_hideable="false"
+      app:behavior_peekHeight="@dimen/editor_sheet_peek_height"
+      app:layout_behavior="com.itsaky.androidide.utils.EditorBottomSheetBehavior"/>
 
     <include
       android:id="@+id/diagnosticInfo"
