--- a/app/src/main/res/layout/layout_editor_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_editor_bottom_sheet.xml
@@ -17,46 +17,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  app:behavior_hideable="false"
-  app:behavior_peekHeight="@dimen/editor_sheet_peek_height"
-  app:layout_behavior="com.itsaky.androidide.utils.EditorBottomSheetBehavior">
+  android:layout_height="match_parent">
 
-  <LinearLayout
-    android:id="@+id/text_container"
+  <ViewFlipper
+    android:id="@+id/header_container"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:layout_marginBottom="12dp"
-    android:background="@android:color/black"
-    android:orientation="vertical">
+    android:layout_height="56dp">
 
-    <TextView
-      android:id="@+id/statusText"
+    <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="20dp"
-      android:gravity="center"
-      android:paddingStart="16dp"
-      android:paddingEnd="16dp"
-      android:singleLine="true"
-      android:textColor="@color/primaryTextColor"
-      android:textSize="14sp" />
+      android:layout_height="56dp"
+      android:layout_marginBottom="12dp"
+      android:background="@android:color/black"
+      android:orientation="vertical">
 
-    <TextView
-      android:id="@+id/swipe_hint"
-      android:layout_width="match_parent"
-      android:layout_height="18dp"
-      android:gravity="center"
-      android:text="@string/msg_swipe_up"
-      android:textColor="@color/secondaryTextColor"
-      android:textSize="11sp" />
+      <TextView
+        android:id="@+id/statusText"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:gravity="center"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:singleLine="true"
+        android:textColor="@color/primaryTextColor"
+        android:textSize="14sp" />
 
-  </LinearLayout>
+      <TextView
+        android:id="@+id/swipe_hint"
+        android:layout_width="match_parent"
+        android:layout_height="18dp"
+        android:gravity="center"
+        android:text="@string/msg_swipe_up"
+        android:textColor="@color/secondaryTextColor"
+        android:textSize="11sp" />
+
+    </LinearLayout>
+
+  </ViewFlipper>
 
   <com.google.android.material.tabs.TabLayout
     android:id="@+id/tabs"
     android:layout_width="match_parent"
     android:layout_height="36dp"
-    android:layout_below="@id/text_container"
+    android:layout_below="@id/header_container"
     android:background="@android:color/black"
     app:tabGravity="fill"
     app:tabIndicatorAnimationMode="elastic"
