--- a/resources/src/main/res/values/colors.xml
+++ b/resources/src/main/res/values/colors.xml
@@ -26,8 +26,8 @@
     <color name="diagnostic_warning">@color/log_warning</color>
     <color name="content_background">#212121</color>
     <color name="bg_widget_selected">#212121</color>
+    <color name="green_500">#4caf50</color>
 
     <color name="color_toast_background">#90424242</color>
     <color name="color_picker_default_color">#f44336</color>
-
 </resources>
