--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -17,13 +17,13 @@
       android:id="@+id/editor_appBarLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:background="@color/primaryDarkColor"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
 
       <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/editor_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primaryDarkColor"
         android:elevation="10dp" />
 
       <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -42,7 +42,7 @@
       <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/file_tab_height"
+        android:layout_height="wrap_content"
         android:background="@color/primaryDarkColor"
         app:tabGravity="start"
         app:tabIndicatorAnimationMode="elastic"
@@ -113,7 +113,7 @@
       android:layout_height="match_parent"
       app:behavior_hideable="false"
       app:behavior_peekHeight="@dimen/editor_sheet_peek_height"
-      app:layout_behavior="com.itsaky.androidide.utils.EditorBottomSheetBehavior"/>
+      app:layout_behavior="com.itsaky.androidide.utils.EditorBottomSheetBehavior" />
 
     <include
       android:id="@+id/diagnosticInfo"
@@ -132,14 +132,19 @@
     app:menu="@menu/menu_editor_nav" />
 
   <com.google.android.material.navigation.NavigationView
+    android:id="@+id/endNav"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_gravity="end">
+    android:layout_gravity="end"
+    android:fitsSystemWindows="false">
 
-    <FrameLayout
-      android:id="@+id/editor_frameLayout"
+    <!-- When changing android:tag here, also change it in FileTreeFragment.kt -->
+    <androidx.fragment.app.FragmentContainerView
+      android:id="@+id/file_tree"
+      android:name="com.itsaky.androidide.fragments.FileTreeFragment"
       android:layout_width="match_parent"
-      android:layout_height="match_parent" />
+      android:layout_height="match_parent"
+      android:tag="editor.fileTree" />
 
   </com.google.android.material.navigation.NavigationView>
 
