--- a/app/src/main/res/layout/layout_run_task.xml
+++ b/app/src/main/res/layout/layout_run_task.xml
@@ -15,25 +15,22 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:paddingBottom="16dp">
+  android:layout_height="wrap_content"
+  android:orientation="vertical">
 
   <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/search_input"
     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     android:hint="@string/hint_search_tasks"
     android:theme="@style/AppTheme.TextInputLayout"
-    app:boxBackgroundColor="@color/content_background"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    app:boxBackgroundColor="@color/content_background">
 
     <com.google.android.material.textfield.TextInputEditText
       android:layout_width="match_parent"
@@ -43,17 +40,13 @@
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/categories"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp"
-    android:descendantFocusability="blocksDescendants"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/search_input"
     tools:itemCount="3"
     tools:listitem="@layout/layout_run_tasks_category" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
