Reduced the number of build progress events received from Tooling API

--- a/app/src/main/res/layout/layout_run_task_dialog.xml
+++ b/app/src/main/res/layout/layout_run_task_dialog.xml
@@ -17,7 +17,6 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:nestedScrollingEnabled="true">
@@ -40,9 +39,9 @@
     android:layout_height="wrap_content"
     android:layout_alignTop="@+id/exec"
     android:layout_alignBottom="@+id/exec"
+    android:layout_alignParentStart="true"
     android:layout_marginStart="16dp"
-    android:layout_marginTop="-8dp"
-    android:layout_marginBottom="1dp"
+    android:layout_toStartOf="@id/exec"
     android:gravity="center_vertical"
     android:text="@string/title_run_tasks"
     android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />
