--- a/app/src/main/res/layout/layout_editor_file_tree.xml
+++ b/app/src/main/res/layout/layout_editor_file_tree.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:paddingStart="8dp"
+  android:paddingEnd="8dp">
+
+  <HorizontalScrollView
+    android:id="@+id/horizontal_croll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="8dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="8dp"
-    android:paddingBottom="8dp">
+    android:fillViewport="true" />
 
-    <HorizontalScrollView
-        android:id="@+id/filetree_horizontalScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp" />
-
-    <ProgressBar
-        android:id="@+id/fileTree_loadingProgress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+  <ProgressBar
+    android:id="@+id/loading"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true" />
 
 </RelativeLayout>
 
