--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
   <com.google.android.material.appbar.AppBarLayout
     android:id="@+id/appbar"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimaryDark"
     android:gravity="center"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
