--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -113,7 +113,7 @@
       android:layout_height="match_parent"
       app:behavior_hideable="false"
       app:behavior_peekHeight="@dimen/editor_sheet_peek_height"
-      app:layout_behavior="com.itsaky.androidide.utils.EditorBottomSheetBehavior" />
+      app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />
 
     <include
       android:id="@+id/diagnosticInfo"
