--- a/app/src/main/res/layout/layout_editor_file_tree.xml
+++ b/app/src/main/res/layout/layout_editor_file_tree.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:paddingStart="8dp"
-  android:paddingEnd="8dp">
+  android:padding="16dp">
 
   <HorizontalScrollView
     android:id="@+id/horizontal_croll"
